--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hotel-rent",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -15,15 +15,12 @@
     "body-parser": "^1.20.3",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "express-fileupload": "^1.5.1",
-    "fs": "^0.0.1-security",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "messagebird": "^4.0.1",
-    "mongoose": "^8.7.1",
+    "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.7",
-    "twilio": "^5.3.6"
+    "nodemon": "^3.1.9",
+    "twilio": "^5.4.0"
   }
 }
